<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#70E6DB">

            <TextView
                android:text="@string/search_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_watchlist_title"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:textColor="#FFFFFF"/>

        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d4f7f4"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/poster_imageview"
                android:layout_weight="0.4"
                android:contentDescription="" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6">

                <TextView
                    android:text="@string/year_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/year_string"
                    android:textSize="30sp"
                    android:padding="10dp"/>

                <TextView
                    android:text="@string/director_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/director_string"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <TextView
                    android:text="@string/actors_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/actors_string"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/summary_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/summary_string" />
        </FrameLayout>

        <Button
            android:text="@string/add_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_remove_button"
            android:background="#4ea199"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:onClick="addRemove"/>

    </LinearLayout>

</LinearLayout>